--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,45 @@ li.slick-active {
 #slider-promotion .slick-arrow.slick-next  {
     display: none !important;
 }
+
+/* Loading */
+.lds-ring {
+    display: inline-block;
+    position: relative;
+}
+  
+.lds-ring div:nth-child(2) {
+    animation-delay: -0.3s;
+}
+  
+.lds-ring div:nth-child(3) {
+    animation-delay: -0.15s;
+}
+
+.lds-ring div {
+    box-sizing: border-box;
+    display: block;
+    position: absolute;
+    border: 4px solid #e00d7a;
+    border-radius: 50%;
+    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    border-color: #e00d7a transparent transparent transparent;
+}
+.lds-ring div:nth-child(1) {
+    animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+    animation-delay: -0.3s;
+}
+.lds-ring div:nth-child(3) {
+    animation-delay: -0.15s;
+}
+
+@keyframes lds-ring {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+}
